--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <h2>Professor:</h2>
      <p>Daniel Krieglstein</p>
      <h2>Lecture Days, Time and Place:</h2>
-     <p>What day of the week? 6:25pm to 9:05pm, Stuart Building, Room 220</p>
+     <p>Tuesdays 6:25pm to 9:05pm, Stuart Building, Room 220</p>
      <h2>Course Catalog Description:</h2>
      <p>This course will cover the creation of Web pages and sites using HTML, CSS, Javascript and graphical applications. 
         Networked multimedia distribution technologies are also explored. 
