--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
      <h1>ITMD-361 Internet Technologies and Web Design</h1>
      <h3>Spring 2013</h3>
-     <p>Student Name and email</p>
+     <p>Kaleb Austgen, kaustgen@hawk.iit.edu</p>
      <h2>Professor:</h2>
      <p>Daniel Krieglstein</p>
      <h2>Lecture Days, Time and Place:</h2>
